<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1,2">

        <LinearLayout
            android:background="#015488"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/nova_viagem"
                android:textAppearance=
                    "?android:attr/textAppearanceLarge"
                android:textStyle="bold"/>

        </LinearLayout>

        <TextView android:text="@string/destino" />
        <EditText
            android:id="@+id/iddestino"
            android:inputType="text" />
        <TextView android:text="@string/tipo_viagem" />
        <RadioGroup
            android:id="@+id/idtipoviagem"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/idlazer"
                android:checked="true"
                android:text="@string/lazer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/idnegocios"
                android:layout_marginLeft="30dp"
                android:text="@string/negocios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>
        <TableRow>
            <TextView
                android:layout_gravity="center"
                android:text="@string/data_saida"/>
            <TextView
                android:layout_gravity="center"
                android:text="@string/data_chegada"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/iddatasaida"
                android:onClick="selecionarData"
                android:text="@string/selecione"/>
            <Button
                android:id="@+id/iddatachegada"
                android:onClick="selecionarData"
                android:text="@string/selecione"/>
        </TableRow>
        <TextView android:text="@string/orcamento" />
        <EditText
            android:id="@+id/idorcamento"
            android:inputType="numberDecimal"/>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/qtdpessoas"/>
            <EditText
                android:id="@+id/idqtdpessoas"
                android:inputType="number"/>
        </TableRow>
        <Button
            android:onClick="salvarViagem"
            android:text="@string/salvar"/>

    </TableLayout>

</ScrollView>